Fix Alignment of Directory Page Sponsors

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -787,6 +787,8 @@ body.page-id-17
       margin-bottom: 5.375rem
       .wp-block-column
         margin-bottom: 0
+        > div
+          text-align: center
       /* Make the Directory Sponsors Banner Images Responsive */
       img
         @extend .img-fluid
